bin_PROGRAMS = warmdle
warmdle_SOURCES = draw_screen.s get_guess.s guess_valid.s main.s print.s \
    print_end_msg.s rand.s strchr.s strcpy.s to_upper.s word_list.s \
    flush_stdin.s guess_list.s input.s mod.s print_bad_guess.s print_guess.s \
    rand_word.s strcmp.s strlen.s trim_newline.s
warmdle_LDFLAGS = -static -nostdlib -Wl,-e_start -Wl,--no-dynamic-linker
